// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> Should match bullet list snapshot 1`] = `
.c3 {
  margin: 4px 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding-left: 0;
}

.c0 li {
  border-bottom: 1px solid #f2f2f2;
}

.c0 li:last-child {
  border: none;
}

<ul
  class="c0"
>
  <li>
    <div
      class="c1"
    >
      
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Tomato sauce
        </span>
      </div>
    </div>
  </li>
  <li>
    <div
      class="c1"
    >
      
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Mustard
        </span>
      </div>
    </div>
  </li>
  <li>
    <div
      class="c1"
    >
      
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Barbecue sauce
        </span>
      </div>
    </div>
  </li>
  <li>
    <div
      class="c1"
    >
      
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Red-wine vinegar
        </span>
      </div>
    </div>
  </li>
  <li>
    <div
      class="c1"
    >
      
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Salsa
        </span>
      </div>
    </div>
  </li>
  <li>
    <div
      class="c1"
    >
      
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Hot pepper sauce
        </span>
      </div>
    </div>
  </li>
</ul>
`;

exports[`<List /> Should match the bullet list snapshot 1`] = `
.c3 {
  margin: 4px 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px;
}

.c0 {
  margin: 0;
  padding: 0;
  list-style: none;
  counter-reset: count;
}

.c0 li {
  margin-left: 24px;
  position: relative;
}

.c0 li:before {
  content: counter(count) '.';
  counter-increment: count;
  position: absolute;
  right: 100%;
  margin-top: 8px;
}

<ol
  class="c0"
>
  <li>
    <div
      class="c1"
    >
      
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Tomato sauce
        </span>
      </div>
    </div>
  </li>
  <li>
    <div
      class="c1"
    >
      
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Mustard
        </span>
      </div>
    </div>
  </li>
  <li>
    <div
      class="c1"
    >
      
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Barbecue sauce
        </span>
      </div>
    </div>
  </li>
  <li>
    <div
      class="c1"
    >
      
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Red-wine vinegar
        </span>
      </div>
    </div>
  </li>
  <li>
    <div
      class="c1"
    >
      
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Salsa
        </span>
      </div>
    </div>
  </li>
  <li>
    <div
      class="c1"
    >
      
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Hot pepper sauce
        </span>
      </div>
    </div>
  </li>
</ol>
`;

exports[`<List /> Should match the default snapshot 1`] = `
.c0 {
  list-style: none;
  margin: 0;
  padding-left: 0;
}

<ul
  class="c0"
/>
`;

exports[`<List /> Should match the divided list snapshot 1`] = `
.c3 {
  margin: 4px 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding-left: 24px;
}

.c0 li {
  display: inline-block;
}

.c0 li {
  position: relative;
}

.c0 li:before {
  content: '•';
  position: absolute;
  top: 12%;
  right: 100%;
}

<ul
  class="c0"
>
  <li>
    <div
      class="c1"
    >
      
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Tomato sauce
        </span>
      </div>
    </div>
  </li>
  <li>
    <div
      class="c1"
    >
      
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Mustard
        </span>
      </div>
    </div>
  </li>
  <li>
    <div
      class="c1"
    >
      
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Barbecue sauce
        </span>
      </div>
    </div>
  </li>
  <li>
    <div
      class="c1"
    >
      
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Red-wine vinegar
        </span>
      </div>
    </div>
  </li>
  <li>
    <div
      class="c1"
    >
      
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Salsa
        </span>
      </div>
    </div>
  </li>
  <li>
    <div
      class="c1"
    >
      
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Hot pepper sauce
        </span>
      </div>
    </div>
  </li>
</ul>
`;
